--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,17 @@ dependencies:
   flutter_spinkit: ^5.1.0
   fl_chart: ^0.63.0
   url_launcher: ^6.1.12
-  provider: ^6.0.5
   intl: ^0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  path_provider: ^2.1.0
+  uuid: ^3.0.7
+  flutter_riverpod: ^2.3.10
 
 dev_dependencies:
   flutter_test:
