--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.1.0
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.10
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
